--- a/infinizai/index.html
+++ b/infinizai/index.html
@@ -195,21 +195,21 @@
           <li><a href="#">licenses</a></li>
           <li><a href="#">Team</a></li>
         </ul>
-      </div>
-      <div class="footer__social">
-        <div class="footer__title">Social Icons</div>
-        <ul class="footer__icons">
-          <li><a href="#"><img src="img/cube.svg" alt="logo"></a></li>
-          <li><a href="#"><img src="img/cube.svg" alt="logo"></a></li>
-          <li><a href="#"><img src="img/cube.svg" alt="logo"></a></li>
-          <li><a href="#"><img src="img/cube.svg" alt="logo"></a></li>
-        </ul>
-      </div>
+      </nav>
     </div>
-    <div class="footer__copy">
-      Copyright by 2021 Flowzai
+    <div class="footer__social">
+      <div class="footer__title">Social Icons</div>
+      <ul class="footer__icons">
+        <li><a href="#"><img src="img/cube.svg" alt="logo"></a></li>
+        <li><a href="#"><img src="img/cube.svg" alt="logo"></a></li>
+        <li><a href="#"><img src="img/cube.svg" alt="logo"></a></li>
+        <li><a href="#"><img src="img/cube.svg" alt="logo"></a></li>
+      </ul>
     </div>
-
+  </div>
+  <div class="footer__copy">
+    Copyright by 2021 Flowzai
+  </div>
 </footer>
 
 </body>
