add new site (Versus)

--- a/index.html
+++ b/index.html
@@ -220,13 +220,13 @@
             <div class="projects-box__inner">
               <div class="projects-hover">
                 <div class="projects-hover__title">
-                  Сайт мобильного приложения
+                  Сайт-портфолио Дизайнера
                 </div>
                 <div class="projects-hover__btn">
-                  <a href="Doo/index.html"><span>Перейти</span> к просмотру</a>
+                  <a href="versus/index.html"><span>Перейти</span> к просмотру</a>
                 </div>
               </div>
-              <img src="assets/img/projects/dimmazz.github.io_portfolio_Doo-psd=.png" alt="View project Mobile app">
+              <img src="assets/img/projects/portfolio_versus-from-psd.png" alt="View project portfolio">
             </div>
           </div>
           <div class="projects-box">
